@startuml

title __FRAMEWORKS's Class Diagram__\n

  namespace fourcats {
    namespace frameworks {
      class fourcats.frameworks.BalAnalyzerImplementation {
          + createJsonFromBAL()
      }
    }
  }
  

  namespace fourcats {
    namespace frameworks {
      class fourcats.frameworks.DataKeeper {
          - lDefaultTypes : List<String>
          - mScenarios : Map<Integer, Scenario>
          - mTypes : Map<Integer, Type>
          + DataKeeper()
          + addBdl()
          + addCustomType()
          + addObject()
          + addScenarioToMap()
          + addSuggestion()
          + addSuggestionByIdType()
          + clearScenariosMap()
          + getBdl()
          + getScenarioMap()
          + getTypeMap()
          + removeAction()
          + removeBdl()
          + removeObject()
          + updateActionName()
          + updateActionType()
          + updateActionTypeById()
          + updateObjectName()
          + updateObjectType()
          + updateObjectTypeById()
          - getMaxKeyInActionMap()
          - initTypesMap()
      }
    }
  }
  

  namespace fourcats {
    namespace frameworks {
      class fourcats.frameworks.FileSystemAccess {
          ~ bdlPathToFolder : String
          + getBdl()
          + loadBdl()
          + readFile()
          + writeFile()
          - readBdlNouns()
          - readBdlPredicates()
          - readBdlVerbs()
      }
    }
  }
  

  namespace fourcats {
    namespace frameworks {
      class fourcats.frameworks.Repository {
          + Repository()
          + crateSuggestionByIdType()
          + createBAL()
          + createCustomType()
          + createObject()
          + createScenario()
          + createSuggestion()
          + deleteBdl()
          + deleteObject()
          + deleteScenarios()
          + deleteSuggestion()
          + read()
          + readAndCreateBdl()
          + readBdl()
          + readScenarios()
          + readTypes()
          + updateActionName()
          + updateActionType()
          + updateActionTypeById()
          + updateObjectName()
          + updateObjectType()
          + updateObjectTypeById()
      }
    }
  }
  

  namespace fourcats {
    namespace frameworks {
      class fourcats.frameworks.StanfordNlp {
          {static} - DP_MODEL : String
          - depparser : DependencyParser
          - pipeline : StanfordCoreNLP
          - props : Properties
          + StanfordNlp()
          + parseDocumentContent()
      }
    }
  }
  

  fourcats.frameworks.BalAnalyzerImplementation .up.|> fourcats.interfaceaccess.BalAnalyzer
  fourcats.frameworks.DataKeeper o-- fourcats.entities.Bdl : bdl
  fourcats.frameworks.FileSystemAccess .up.|> fourcats.interfaceaccess.PersistentMemoryAccess
  fourcats.frameworks.Repository .up.|> fourcats.interfaceaccess.RepositoryAccess
  fourcats.frameworks.Repository o-- fourcats.frameworks.DataKeeper : dataKeeper
  fourcats.frameworks.Repository o-- fourcats.interfaceaccess.PersistentMemoryAccess : memoryAccess
  fourcats.frameworks.StanfordNlp .up.|> fourcats.interfaceaccess.TextAnalyzer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
